Fix chip with large text overflowing from chip set

--- a/src/components/Chip/Chip.scss
+++ b/src/components/Chip/Chip.scss
@@ -1,3 +1,13 @@
+.mdc-chip {
+  max-width: 100%;
+
+  .chip-label {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
 .colored {
   color: var(--chip-color);
   border: 1px solid var(--chip-color);
