--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -74,5 +74,6 @@ p {
 
   > * {
     list-style-type: none;
+    max-width: 100%;
   }
 }
